# agent-redteam

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  critique_report.html  critique_report_v2.html  cve_CVE-2026-agent-redteam-58dc1683.json  cve_CVE-2026-agent-redteam-d02edb9c.json  cve_CVE-2026-test-org-0000d73c.json  cve_CVE-2026-test-org-0001b0ed.json  cve_CVE-2026-test-org-00025fec.json  cve_CVE-2026-test-org-000278b1.json  cve_CVE-2026-test-org-0002ed85.json  cve_CVE-2026-test-org-0003297a.json  cve_CVE-2026-test-org-00039545.json  cve_CVE-2026-test-org-0003ca89.json  cve_CVE-2026-test-org-000405cc.json  cve_CVE-2026-test-org-000441cb.json  cve_CVE-2026-test-org-0004cffc.json  cve_CVE-2026-test-org-000553a2.json  cve_CVE-2026-test-org-0006c37d.json  cve_CVE-2026-test-org-0006cc6f.json  cve_CVE-2026-test-org-0007ae11.json  cve_CVE-2026-test-org-0007da22.json  cve_CVE-2026-test-org-0008591a.json  cve_CVE-2026-test-org-00086e52.json  cve_CVE-2026-test-org-00089cd6.json  cve_CVE-2026-test-org-00091b88.json  cve_CVE-2026-test-org-000a231f.json  cve_CVE-2026-test-org-000a3890.json  cve_CVE-2026-test-org-000aa917.json  cve_CVE-2026-test-org-000abb27.json  cve_CVE-2026-test-org-000b1d9b.json  cve_CVE-2026-test-org-000bfa4e.json  cve_CVE-2026-test-org-000c53a5.json  cve_CVE-2026-test-org-000d44d7.json  cve_CVE-2026-test-org-000d6a3a.json  cve_CVE-2026-test-org-000da05c.json  cve_CVE-2026-test-org-000e04d4.json  cve_CVE-2026-test-org-000eac9c.json  (+130494 more)
src/: agent_client.rs  attack_engine.rs  cve_registry.rs  fuzz_engine.rs  lib.rs  live_dashboard.rs  main.rs.backup  report.rs  (+5 more)
(+5 files in other folders)
